[gd_scene load_steps=14 format=3 uid="uid://cw6w3umy0lrt"]

[ext_resource type="Script" path="res://Scenes/ui_elements/storage_added/storage_added.gd" id="1_u1wqv"]
[ext_resource type="Resource" uid="uid://cubsxe7886wr5" path="res://UI/CustomResources/resource_icons.tres" id="3_c57ba"]
[ext_resource type="Texture2D" uid="uid://xthvnnerghmo" path="res://Assets/ui/icons/80px/energy_80px.png" id="3_q0kof"]
[ext_resource type="Texture2D" uid="uid://bkppjwkh2y5ld" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/circle_03.png" id="4_6nxmi"]
[ext_resource type="Texture2D" uid="uid://drwqwugd7hk2l" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/window_04.png" id="4_bh2cr"]
[ext_resource type="Texture2D" uid="uid://cadns3o55oy1m" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/light_03.png" id="6_lnqvo"]

[sub_resource type="Animation" id="Animation_n6yyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fnhd7"]
resource_name = "move_up"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.975),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 2.975),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajra1"]
_data = {
"RESET": SubResource("Animation_n6yyq"),
"move_up": SubResource("Animation_fnhd7")
}

[sub_resource type="Animation" id="Animation_e4tqq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("move_container/VBoxContainer/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("move_container/VBoxContainer/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vw1g8"]
resource_name = "scale_circle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("move_container/VBoxContainer/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("move_container/VBoxContainer/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wo4kp"]
_data = {
"RESET": SubResource("Animation_e4tqq"),
"scale_circle": SubResource("Animation_vw1g8")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fkk80"]
blend_mode = 1

[node name="StorageAdded" type="Node2D"]
script = ExtResource("1_u1wqv")
resource_icons = ExtResource("3_c57ba")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../move_container/VBoxContainer/MessageLabel")
libraries = {
"": SubResource("AnimationLibrary_ajra1")
}
autoplay = "move_up"

[node name="AnimationPlayerScale" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wo4kp")
}
autoplay = "scale_circle"

[node name="move_container" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="move_container"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -100.0
offset_right = 140.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="move_container/VBoxContainer"]
position = Vector2(140, 50.1427)

[node name="Window04" type="Sprite2D" parent="move_container/VBoxContainer/Sprite2D"]
visible = false
modulate = Color(0.00392157, 0.00392157, 0.00392157, 0.141176)
position = Vector2(0, 11.2878)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_bh2cr")

[node name="Circle03" type="Sprite2D" parent="move_container/VBoxContainer/Sprite2D"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.444)
material = SubResource("CanvasItemMaterial_fkk80")
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_6nxmi")

[node name="Light03" type="Sprite2D" parent="move_container/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0.654902, 1, 1)
position = Vector2(139, 46)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_lnqvo")

[node name="MessageLabel" type="Label" parent="move_container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Medium"
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Storage limit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="move_container/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="move_container/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="AmountLabel" type="Label" parent="move_container/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Medium"
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
text = "+500"
vertical_alignment = 1

[node name="ResourceIcon" type="TextureRect" parent="move_container/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_q0kof")
